--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- menu bar -->
     <header>
  <nav> 
     <div class="menu-container">
       <div class="logo">
-        <img src="./Logo/Dawah logo.png" alt="">
+        <img class="logo-photo" src="./Logo/Dawah logo.png" alt="">
       </div>
       <div class="menu">
-          <li>Home</li>
-          <li>Contact</li>
-          <li>About</li>
-          <li>Service</li>
+          <li class="item">Home</li>
+          <li class="item">Contact</li>
+          <li class="item">About</li>
+          <li class="item">Service</li>
 
       </div>
 
