--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
 
     </div>
   </section>
+
+  <!-- about us section -->
+  <section>
+    <h1 class="about">About Us</h1>
+    <div class="about-container">
+
+        <div class="banner-img">
+            <img class="banner-img" src="./Image/Banner 2.png" alt="">
+        </div>
+
+<div class="about-text">
+    <h3 class="about-title">Our Organization is Non-Profitable</h3>
+    <p class="about-descrip"> Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Possimus ea hic dicta.</p>
+    <button class="btn">Read More</button>
+</div>
+ 
+    </div>
+
+  </section>
     </main>
 
 <footer>
