--- a/index.html
+++ b/index.html
@@ -64,6 +64,38 @@
     </div>
 
   </section>
+<!-- service section start here -->
+
+<section>
+    <h1 class="about box-service">Our Service</h1>
+    <div class="service-container">
+        <div class="box">
+            <img class="icon" src="./Icon/icon 1.png" alt="">
+            <h3 class="box-title">Quran</h3>
+            <p class="box-dis">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores magni quae debitis eveniet quis natus, sint modi saepe voluptatibus at?</p>
+            <button class="btn box-btn">Purchase</button>
+
+        </div>
+        <div class="box">
+            <img class="icon" src="./Icon/icon 2.png" alt="">
+            <h3 class="box-title">Hadith</h3>
+            <p class="box-dis">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores magni quae debitis eveniet quis natus, sint modi saepe voluptatibus at?</p>
+            <button class="btn box-btn">Purchase</button>
+
+        </div>
+
+        <div class="box">
+            <img class="icon" src="./Icon/icon 3.png" alt="">
+            <h3 class="box-title">Islamic Book</h3>
+            <p class="box-dis">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores magni quae debitis eveniet quis natus, sint modi saepe voluptatibus at?</p>
+            <button class="btn box-btn">Purchase</button>
+
+        </div>
+
+    </div>
+
+</section>
+
     </main>
 
 <footer>
